# streamlit-cropper

./: .gitignore  .hide-pyproject.toml  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ruff.yml
streamlit_cropper/: __init__.py
streamlit_cropper/frontend/: package-lock.json  package.json
streamlit_cropper/frontend/src/: StreamlitCropper.tsx  index.css  index.tsx
streamlit_cropper/frontend/src/streamlit/: index.tsx  streamlit.ts
