[project]
name="streamlit-cropper"
version="0.3.0a"
authors=[{name="Turner Anderson", email="andersontur11@gmail.com"}]
description="A simple image cropper for Streamlit"
readme="README.md"
requires-python=">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
    "Pillow",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/turner-anderson/streamlit-cropper"
"Bug Tracker" = "https://github.com/turner-anderson/streamlit-cropper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4